# Psych-Trainer

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  problems_solved.md  pyproject.toml
.github/workflows/: test.yml
frontend/: app.js  index.html  style.css
frontend-react/: index.html  package-lock.json  package.json
frontend-react/src/: App.jsx  App.tsx
frontend-react/src/components/: AuthScreen.jsx  AuthScreen.tsx  ChatPanel.jsx  ChatPanel.tsx  EvaluationPanel.jsx  EvaluationPanel.tsx  Sidebar.jsx  Sidebar.tsx
frontend-react/src/lib/: supabase.ts
frontend-react/src/store/: useStore.ts
scripts/: ingest_data.py  verify_persistence.py
src/psychtrainer/: __init__.py  config.py  logger_setup.py
src/psychtrainer/agents/: patient.py  professor.py  summarizer.py
src/psychtrainer/rag/: cloud_inference.py  ingest.py  knowledge.py  pg_ingest.py  pg_knowledge.py
src/psychtrainer/service/: api.py  schema.py  socket.py  worker.py
src/psychtrainer/workflow/: graph.py  persistence.py  prompt_registry.py  state.py
supabase/migrations/: 001_system_prompts.sql  002_user_sessions.sql
tests/: conftest.py  test_api.py  test_graph.py
