[project]
name = "psychtrainer"
version = "0.1.0"
description = "Industrial AI Clinical Simulation Platform for Medical Training"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.129.0",
    "fastapi-limiter>=0.2.0",
    "fastembed>=0.7.4",
    "httpx>=0.28.1",
    "langchain>=1.2.10",
    "langchain-core>=1.2.13",
    "langgraph>=1.0.8",
    "langgraph-checkpoint-postgres>=3.0.4",
    "langgraph-checkpoint-sqlite>=1.0.0",
    "langsmith>=0.1.0",
    "litellm>=1.81.13",
    "psycopg>=3.3.3",
    "psycopg-pool>=3.3.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.0",
    "pypdf>=6.7.1",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.16.2",
    "redis>=7.2.0",
    "sentence-transformers>=5.2.3",
    "supabase>=2.28.0",
    "uvicorn[standard]>=0.41.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/psychtrainer"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
filterwarnings = [
    "ignore::DeprecationWarning",
]
